--- a/src/index.css
+++ b/src/index.css
@@ -251,3 +251,12 @@ input.note-title {
   text-align: center;
   font-size: 1.2em;
 }
+
+.log {
+  float: right;
+}
+
+.profile{
+  padding-top: 10px;
+}
+
