--- a/src/index.css
+++ b/src/index.css
@@ -258,5 +258,12 @@ input.note-title {
 
 .profile{
   padding-top: 10px;
+  font-size: 15px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-weight: 100;
+  margin-top: 30px;
+  margin-right: 10px;
 }
+
+
 
