--- a/src/index.css
+++ b/src/index.css
@@ -259,7 +259,7 @@ input.note-title {
 .profile{
   padding-top: 10px;
   font-size: 15px;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 100;
   margin-top: 30px;
   margin-right: 10px;
